feat: model experiments

--- a/experiments/model_experiments.ipynb
+++ b/experiments/model_experiments.ipynb
@@ -2,28 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
    "id": "initial_id",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-18T03:20:33.875201Z",
-     "start_time": "2024-09-18T03:20:33.872785Z"
+     "end_time": "2024-10-16T01:38:13.890357Z",
+     "start_time": "2024-10-16T01:38:12.330330Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
-      "                                 Dload  Upload   Total   Spent    Left  Speed\n",
-      "100 1330k  100 1330k    0     0  4348k      0 --:--:-- --:--:-- --:--:-- 4347k  3147k      0 --:--:-- --:--:-- --:--:-- 3142k\n",
-      "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
-      "                                 Dload  Upload   Total   Spent    Left  Speed\n",
-      "100 1253k  100 1253k    0     0  4255k      0 --:--:-- --:--:-- --:--:-- 4264k\n"
-     ]
-    }
-   ],
    "source": [
     "# Create the directory if it doesn't exist\n",
     "!mkdir -p ../data\n",
@@ -31,28 +16,51 @@
     "# Download files using curl\n",
     "!curl -o ../data/green_tripdata_2024-01.parquet https://d37ci6vzurychx.cloudfront.net/trip-data/green_tripdata_2024-01.parquet\n",
     "!curl -o ../data/green_tripdata_2024-02.parquet https://d37ci6vzurychx.cloudfront.net/trip-data/green_tripdata_2024-02.parquet"
-   ]
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\r\n",
+      "                                 Dload  Upload   Total   Spent    Left  Speed\r\n",
+      "100 1330k  100 1330k    0     0  1773k      0 --:--:-- --:--:-- --:--:-- 1771k\r\n",
+      "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\r\n",
+      "                                 Dload  Upload   Total   Spent    Left  Speed\r\n",
+      "100 1253k  100 1253k    0     0  3634k      0 --:--:-- --:--:-- --:--:-- 3644k\r\n"
+     ]
+    }
+   ],
+   "execution_count": 4
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
    "id": "e5e5e01f84462043",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-16T01:35:16.471624Z",
+     "start_time": "2024-10-16T01:35:13.579080Z"
+    }
+   },
    "source": [
     "import pickle\n",
     "import pandas as pd\n",
     "from sklearn.metrics import  root_mean_squared_error\n",
     "from sklearn.feature_extraction import  DictVectorizer\n",
     "from sklearn.linear_model import Lasso, Ridge, LinearRegression"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 1
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
    "id": "085a70a3-e755-4a1a-8881-5a231164fb22",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-16T01:38:46.963560Z",
+     "start_time": "2024-10-16T01:38:46.959517Z"
+    }
+   },
    "source": [
     "def read_dataframe(filename):\n",
     "\n",
@@ -67,18 +75,33 @@
     "    df[categorical] = df[categorical].astype(str)\n",
     "\n",
     "    return df"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 7
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
    "id": "e6ceb1db-dd02-4c39-a880-51b1343943af",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-16T01:38:50.127532Z",
+     "start_time": "2024-10-16T01:38:49.717028Z"
+    }
+   },
    "source": [
     "df_train = read_dataframe('../data/green_tripdata_2024-01.parquet')\n",
     "df_val = read_dataframe('../data/green_tripdata_2024-02.parquet')"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 8
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "df = df_train[['PULocationID', 'DOLocationID', \"trip_distance\", \"duration\"]]",
+   "id": "29d1f445623b01fb"
   },
   {
    "cell_type": "code",
@@ -147,7 +170,7 @@
        "</pre>\n"
       ],
       "text/plain": [
-       "Initialized MLflow to track repo \u001b[32m\"zapatacc/nyc-taxi-time-prediction\"\u001b[0m\n"
+       "Initialized MLflow to track repo \u001B[32m\"zapatacc/nyc-taxi-time-prediction\"\u001B[0m\n"
       ]
      },
      "metadata": {},
@@ -230,7 +253,7 @@
        "</pre>\n"
       ],
       "text/plain": [
-       "Client created. Use the name of the repo \u001b[1m(\u001b[0mnyc-taxi-time-prediction\u001b[1m)\u001b[0m as the name of the bucket\n"
+       "Client created. Use the name of the repo \u001B[1m(\u001B[0mnyc-taxi-time-prediction\u001B[1m)\u001B[0m as the name of the bucket\n"
       ]
      },
      "metadata": {},
